--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
 
 %body
   #wrapper
-    .navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
+    .navbar.navbar-default.navbar-fixed-top{:role => "navigation", :style => "margin-left: 0px; margin-right: 0px;"}
       .navbar-header
         %button.navbar-toggle.collapsed{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
           %span.sr-only
