--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -103,3 +103,19 @@
       -if current_user.parent? && @task.id
         = link_to t("delete"), task_path(@task), method: :delete, data: {confirm: t('are_you_sure')}, remote: true, class: "btn btn-danger"
       %input.btn.btn-primary{:name => "commit", :type => "submit", :value => t('save')}/
+
+-completions = @task.completions.last(10).reverse
+-if completions.any?
+  %table.table.table-hover
+    %thead
+      %tr
+        %th= t("history")
+        %th
+    %tbody
+      -completions.each do |completion|
+        %tr
+          %td{:style => "padding-top:10px;"}
+            =image_tag(gravatar_for(completion.user), class: "img-rounded task-done-by", size: "25x25")
+            =completion.user.name
+          %td{:align => "right"}
+            =completion.completed
