use common sidenav

--- a/app/views/families/_sidenav.html.haml
+++ b/app/views/families/_sidenav.html.haml
@@ -3,7 +3,7 @@
     .panel-heading
       %h4
         .pull-right
-          -if current_user.parent?
+          -if current_user.parent? && params[:controller] == 'families'
             =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), edit_family_path(@family), remote: true
         = link_to t('blank_family', family: @family.name), "/family", class: 'location'
     .panel-body.visible-xs
@@ -21,22 +21,23 @@
                 = link_to image_tag(gravatar_for(user), class: "img-rounded", size: "40x40"), member_path(user), class: 'location'
 
     .panel-body.hidden-xs
-      %table.table.table-hover
-        %thead
-          %tr
-            %th= t('portal_links')
-        %tbody
-          %tr
-            %td{colspan: '2'}= link_to t('family_portal'), "#{@family.portal_url}?token=#{current_user.get_token}", target: :blank
-          %tr
-            %td{colspan: '2'}= link_to t("auto_auth_link"), "/family?token=#{current_user.get_token}", target: :blank
+      -if params[:controller] == 'families'
+        %table.table.table-hover
+          %thead
+            %tr
+              %th= t('portal_links')
+          %tbody
+            %tr
+              %td{colspan: '2'}= link_to t('family_portal'), "#{@family.portal_url}?token=#{current_user.get_token}", target: :blank
+            %tr
+              %td{colspan: '2'}= link_to t("auto_auth_link"), "/family?token=#{current_user.get_token}", target: :blank
 
       %table.table.table-hover
         %thead
           %tr
             %th= t('members')
             %th
-              -if current_user.parent?
+              -if current_user.parent? && params[:controller] == 'families'
                 = link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_user_path, remote: true
         %tbody
           -@members.each do |user|
