--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,8 +8,8 @@
     .lead= t('tag_line')
     %p
       .btn-group.btn-group-justified{style: 'width:200px;'}
-        =link_to t('sign_in'), login_path, remote: true, class: "btn btn-primary"
-        =link_to t('sign_up'), signup_path, class: "btn btn-success"
+        =link_to t('sign_in'), login_path, class: "btn btn-primary"
+        =link_to t('sign_up'), signup_path, class: "btn btn-info"
 .row.home-row-grey
   .col-md-6{align: 'center'}
     %table.home-badge.home-pic
