--- a/app/views/users/signup.html.haml
+++ b/app/views/users/signup.html.haml
@@ -1,78 +1,76 @@
-.panel.panel-default
-  .panel-heading
-    %h4= t('create_account')
-  .panel-body
-    %form.form-horizontal{"accept-charset" => "UTF-8", :action => '/register', "data-remote" => "true", :method => "post", :role => "form"}
-      %div{:style => "display:none"}
-        %input{:name => "utf8", :type => "hidden", :value => "✓"}/
-      .form-group{style: "margin-bottom:0px;"}
-        %label.col-md-3.control-label
-        .col-md-9
-          -if @user.errors.any? || @family.errors.any?
-            .errors.alert.alert-danger
-              %ul
-                - @user.errors.full_messages.each do |error|
-                  %li= error
-                - @family.errors.full_messages.each do |error|
-                  %li= error
-      .form-group
-        %label.col-md-3.control-label{:for => "name"}= t('name')
-        .col-md-9
-          %input#name.form-control{:type => "text", :name => 'user[name]', :value => @user.name}
-      .form-group
-        %label.col-md-3.control-label{:for => "email"}= t('email')
-        .col-md-9
-          %input#email.form-control{:type => "text", :name => 'user[email]', :value => @user.email}
-      .form-group
-        %label.col-md-3.control-label{:for => "password"}= t('password')
-        .col-md-9
-          %input#password.form-control{:type => "password", :name => 'user[password]'}
-      .form-group
-        %label.col-md-3.control-label{:for => "password_confirmation"}= t('confirm_password')
-        .col-md-9
-          %input#password_confirmation.form-control{:type => "password", :name => 'user[password_confirmation]'}
-      .form-group
-        %label.col-md-3.control-label{:for => "pin"}= t('pin')
-        .col-md-9
-          %input#pin.form-control{:type => "text", :name => 'user[pin]', :value => @user.pin}
-          .text-muted= t('pin_info')
-      .form-group
-        %label.col-md-3.control-label{:for => "timezone"}= t('timezone')
-        .col-md-9
-          - ActiveSupport::TimeZone.us_zones
-          %select#timezone.form-control{:name => 'user[timezone]'}
-            -timezone = @user.timezone || "America/Los_Angeles"
-            -ActiveSupport::TimeZone.us_zones.each do |zone|
-              %option{:value => zone.tzinfo.name, :selected => (zone.tzinfo.name == timezone)}= zone.name
-      .form-group
-        %label.col-md-3.control-label= t('parent')
-        .col-md-9
-          .material-switch{style: 'padding:12px 0px 0px 12px;'}
-            %input{:name => "user[parent]", :type => "hidden", :value => 'off'}
-            %input#parent{:name => "user[parent]", :type => "checkbox", :checked => @user.parent, :onchange => "$('.notifications-group').toggle();"}
-            %label.label-success{:for => "parent"}
-
-      .notifications-group{style: "#{'display:none;' unless @user.parent}"}
-        .form-group
-          %label.col-md-3.control-label{:for => "notifications"}= t('notifications')
-          .col-md-9
-            - ActiveSupport::TimeZone.us_zones
-            %select#notifications.form-control{:name => 'user[notifications]'}
-              -[[0,t("none")],[1,t("daily_report")]].each do |n|
-                %option{:value => n[0], :selected => (n[0] == @user.notifications)}= n[1]
-        .form-group
-          %label.col-md-3.control-label{:for => "name"}= t('name')
-          .col-md-9
-            %input#name.form-control{:type => "text", :name => 'family[name]', :value => @family.name}
-            -unless @family.id
-              .text-muted= t('family_name_info')
-        .form-group
-          %label.col-md-3.control-label{:for => "url"}= t('family_id')
-          .col-md-9
-            %input#url.form-control{:type => "text", :name => 'family[url]', :value => @family.url}
-            -unless @family.id
-              .text-muted= t('family_id_info')
-      .form-group
-        %label.col-md-3.control-label
-        .col-md-9{align: 'right'}
-          %input.btn.btn-primary{:name => "commit", :type => "submit", :value => t('save')}/
+.row.home-row
+  .col-md-6
+    %h1
+      = image_tag("/assets/leaf_vectorized.png", size: "200x200", style: "margin-top:-10px;")
+      = t("family")
+  .col-md-6
+    .panel.panel-default
+      .panel-heading
+        %h4= t('create_account')
+      .panel-body
+        %form#sign-up.form-horizontal{"accept-charset" => "UTF-8", :action => '/register', "data-remote" => "true", :method => "post", :role => "form"}
+          %div{:style => "display:none"}
+            %input{:name => "utf8", :type => "hidden", :value => "✓"}/
+            %input{:name => "user[parent]", :type => "hidden", :value => 'on'}
+          .form-group{style: "margin-bottom:0px;"}
+            %label.col-md-3.control-label
+            .col-md-9
+              .errors
+          .form-group
+            %label.col-md-3.control-label{:for => "name"}= t('name')
+            .col-md-9
+              %input#name.form-control{:type => "text", :name => 'user[name]', :value => @user.name}
+          .form-group
+            %label.col-md-3.control-label{:for => "email"}= t('email')
+            .col-md-9
+              %input#email.form-control{:type => "text", :name => 'user[email]', :value => @user.email}
+          .form-group
+            %label.col-md-3.control-label{:for => "password"}= t('password')
+            .col-md-9
+              %input#password.form-control{:type => "password", :name => 'user[password]'}
+          .form-group
+            %label.col-md-3.control-label{:for => "password_confirmation"}= t('confirm_password')
+            .col-md-9
+              %input#password_confirmation.form-control{:type => "password", :name => 'user[password_confirmation]'}
+          .form-group
+            %label.col-md-3.control-label{:for => "pin"}= t('pin')
+            .col-md-9
+              %input#pin.form-control{:type => "text", :name => 'user[pin]', :value => @user.pin}
+              .text-muted= t('pin_info')
+          .form-group
+            %label.col-md-3.control-label{:for => "timezone"}= t('timezone')
+            .col-md-9
+              - ActiveSupport::TimeZone.us_zones
+              %select#timezone.form-control{:name => 'user[timezone]'}
+                -timezone = @user.timezone || "America/Los_Angeles"
+                -ActiveSupport::TimeZone.us_zones.each do |zone|
+                  %option{:value => zone.tzinfo.name, :selected => (zone.tzinfo.name == timezone)}= zone.name
+          .form-group
+            %label.col-md-3.control-label{:for => "notifications"}= t('notifications')
+            .col-md-9
+              - ActiveSupport::TimeZone.us_zones
+              %select#notifications.form-control{:name => 'user[notifications]'}
+                -[[0,t("none")],[1,t("daily_report")]].each do |n|
+                  %option{:value => n[0], :selected => (n[0] == @user.notifications)}= n[1]
+          .form-group{style: "margin-bottom:0px;"}
+            %label.col-md-3.control-label
+            .col-md-9
+              .fam-errors
+          .form-group
+            %label.col-md-3.control-label{:for => "name"}= t('family_name')
+            .col-md-9
+              %input#name.form-control{:type => "text", :name => 'family[name]', :value => @family.name}
+              -unless @family.id
+                .text-muted= t('family_name_info')
+          .form-group
+            %label.col-md-3.control-label{:for => "url"}= t('family_id')
+            .col-md-9
+              %input#url.form-control{:type => "text", :name => 'family[url]', :value => @family.url}
+              -unless @family.id
+                .text-muted= t('family_id_info')
+          .form-group
+            %label.col-md-3.control-label
+            .col-md-9{align: 'right'}
+              .btn-group.btn-group-justified{style: 'width:200px;'}
+                =link_to t('sign_up'), "#", class: "btn btn-primary", onclick: "$('#sign-up').submit();"
+                =link_to t('cancel'), "/", class: "btn btn-info"
