--- a/app/views/users/signup.html.haml
+++ b/app/views/users/signup.html.haml
@@ -73,4 +73,4 @@
             .col-md-9{align: 'right'}
               .btn-group.btn-group-justified{style: 'width:200px;'}
                 =link_to t('sign_up'), "#", class: "btn btn-primary", onclick: "$('#sign-up').submit();"
-                =link_to t('cancel'), "/", class: "btn btn-info"
+                =link_to t('cancel'), "/", class: "btn btn-info location"
